feat(api): update fabric
