# api/app/v1/controllers/fabric.go
@@ -138,3 +138,36 @@ func (m *FabricController) CreateFabric(c echo.Context) error {
 
 	return c.JSON(http.StatusCreated, fabric)
 }
+
+// UpdateFabric Update a fabric
+// @Summary      Update a fabric
+// @Description  Update a fabric by id
+// @Tags         Fabrics
+// @Param        fabricId path string true "Fabric ID"
+// @Param        models.FabricUpdateBody body string true "Fabric update values"
+// @Produce      json
+// @Success      200 {object} models.Fabric
+// @Failure      400
+// @Failure      500
+// @Router       /fabrics/fabricId [patch]
+func (m *FabricController) UpdateFabric(c echo.Context) error {
+	u := new(models.FabricUpdateBody)
+
+	// bind
+	if err := c.Bind(u); err != nil {
+		return problems.UpdateFabricBadRequest()
+	}
+
+	// validate
+	if err := c.Validate(u); err != nil {
+		return problems.UpdateFabricBadRequest()
+	}
+
+	// update
+	resource, err := m.FabricRepository.UpdateFabric(u)
+	if err != nil {
+		return err
+	}
+
+	return c.JSON(http.StatusOK, resource)
+}
