# api/docs/swagger.json
@@ -540,6 +540,48 @@
                         "description": "Internal Server Error"
                     }
                 }
+            },
+            "patch": {
+                "description": "Update a fabric by id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Fabrics"
+                ],
+                "summary": "Update a fabric",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Fabric ID",
+                        "name": "fabricId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Fabric update values",
+                        "name": "models.FabricUpdateBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Fabric"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
             }
         },
         "/images": {
@@ -1513,6 +1555,9 @@
                 },
                 "supplier_id": {
                     "type": "integer"
+                },
+                "track": {
+                    "type": "string"
                 }
             }
         },
@@ -1860,6 +1905,9 @@
                 },
                 "supplier_id": {
                     "type": "integer"
+                },
+                "track": {
+                    "type": "string"
                 }
             }
         },
