# api/pkg/routes/fabric.go
@@ -15,5 +15,5 @@ func privateFabricRoutes(g *echo.Group) {
 	route.GET("/aggregate", fabricController.AggregateFabrics)
 	route.POST("", fabricController.CreateFabric)
 	route.GET("/:fabricId", fabricController.ReadFabrics)
-	route.PATCH("/:fabricId", fabricController.ReadFabrics)
+	route.PATCH("/:fabricId", fabricController.UpdateFabric)
 }
